; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_omap-usb-tll.c_omap_tll_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_omap-usb-tll.c_omap_tll_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbhs_omap_platform_data = type { i32* }
%struct.usbtll_omap = type { i32, i32* }

@tll_dev = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@tll_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap_tll_disable(%struct.usbhs_omap_platform_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usbhs_omap_platform_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.usbtll_omap*, align 8
  store %struct.usbhs_omap_platform_data* %0, %struct.usbhs_omap_platform_data** %3, align 8
  %6 = load i32, i32* @tll_dev, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @ENODEV, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %2, align 4
  br label %59

11:                                               ; preds = %1
  %12 = call i32 @spin_lock(i32* @tll_lock)
  %13 = load i32, i32* @tll_dev, align 4
  %14 = call %struct.usbtll_omap* @dev_get_drvdata(i32 %13)
  store %struct.usbtll_omap* %14, %struct.usbtll_omap** %5, align 8
  store i32 0, i32* %4, align 4
  br label %15

15:                                               ; preds = %52, %11
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.usbtll_omap*, %struct.usbtll_omap** %5, align 8
  %18 = getelementptr inbounds %struct.usbtll_omap, %struct.usbtll_omap* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %55

21:                                               ; preds = %15
  %22 = load %struct.usbhs_omap_platform_data*, %struct.usbhs_omap_platform_data** %3, align 8
  %23 = getelementptr inbounds %struct.usbhs_omap_platform_data, %struct.usbhs_omap_platform_data* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i32, i32* %4, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @omap_usb_mode_needs_tll(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %51

31:                                               ; preds = %21
  %32 = load %struct.usbtll_omap*, %struct.usbtll_omap** %5, align 8
  %33 = getelementptr inbounds %struct.usbtll_omap, %struct.usbtll_omap* %32, i32 0, i32 1
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %4, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @IS_ERR(i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %50, label %41

41:                                               ; preds = %31
  %42 = load %struct.usbtll_omap*, %struct.usbtll_omap** %5, align 8
  %43 = getelementptr inbounds %struct.usbtll_omap, %struct.usbtll_omap* %42, i32 0, i32 1
  %44 = load i32*, i32** %43, align 8
  %45 = load i32, i32* %4, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @clk_disable(i32 %48)
  br label %50

50:                                               ; preds = %41, %31
  br label %51

51:                                               ; preds = %50, %21
  br label %52

52:                                               ; preds = %51
  %53 = load i32, i32* %4, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %4, align 4
  br label %15

55:                                               ; preds = %15
  %56 = call i32 @spin_unlock(i32* @tll_lock)
  %57 = load i32, i32* @tll_dev, align 4
  %58 = call i32 @pm_runtime_put_sync(i32 %57)
  store i32 0, i32* %2, align 4
  br label %59

59:                                               ; preds = %55, %8
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local %struct.usbtll_omap* @dev_get_drvdata(i32) #1

declare dso_local i64 @omap_usb_mode_needs_tll(i32) #1

declare dso_local i32 @IS_ERR(i32) #1

declare dso_local i32 @clk_disable(i32) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @pm_runtime_put_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
